--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,15 +7,15 @@ spring.jpa.show-sql=true
 #spring.datasource.url=jdbc:mysql://localhost:3306/demo-test?useUnicode=true&characterEncoding=utf8&autoReconnect=true&serverTimezone=GMT%2B8
 #aliyun server
 #spring.datasource.url=jdbc:mysql://localhost:3306/MeetingApp?useUnicode=true&useSSL=false&characterEncoding=utf8
-spring.datasource.url=jdbc:mysql://39.106.15.220:3306/MeetingApp?useUnicode=true&useSSL=false&characterEncoding=utf8
+spring.datasource.url=jdbc:mysql://localhost:3306/MeetingApp?useUnicode=true&useSSL=false&characterEncoding=utf8
 spring.datasource.username=root
-spring.datasource.password=123
+spring.datasource.password=123456
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 #redis
 spring.redis.port=6379
 spring.redis.host=localhost
-spring.redis.password=
+spring.redis.password=123456
 # 连接池最大连接数（使用负值表示没有限制）
 spring.redis.jedis.pool.max-active=8
 # 连接池最大阻塞等待时间（使用负值表示没有限制）
